    
    * [Enh] [Aesthetic] Prefix some private methods with "_".
    
    * [Enh] [Aesthetic] Code cleanups.

    * [Done] [Enh] Allow usage of LWP through a proxy
      - Suggested by Mark <MpoloN7@netscape.net>.
      - Uses environment variables to set the proxy settings. E.g.:
        http_proxy=http://proxy.my.place/
        no_proxy="localhost,my.domain"
        export http_proxy no_proxy
  
  All Online Modules
  
      * [Done] [Enh] Migrate the "retry on failure" code from the interchange 
      usertag [business-shipping] to Business::Shipping proper.  Default to 
      tries = 2.
    
  Tracking
  
    * [Enh] More progress on upgrade of tracking modules to C:MM 2.0. 


1.52  Sep 14 2004 
  
  
  General
  
    * [Enh] Allow users to change the runtime logging level.
      New Business::Shipping->log_level() method can override the log4perl.conf
      logging level.
      
    * [Done] [Enh] Resurrect the event_handlers() method for backwards 
      compatibility.  Mapped to Business::Shipping->log_level().
      
    * [Done] [Enh] [Log4perl] replace die and warn with logdie and logwarn.
    
    * [Fixed] ClassInfo/ClassAttribs does not trap all exceptions.
      
  USPS_Online
  
    * [Fixed] Missing module bugs
      - List of errors:
        "Can't locate Business/Shipping/Package/USPS.pm in @INC"
	"Can't locate Business/Shipping/Shipment/USPS.pm in @INC"
      - Caused by module name restructure in 1.51.
      - Reported by Micah Gersten <micah@davka.com>.


1.51  Sep 10 2004  


  Compatibility
  
    * Module names have been restructured.  When using 
      Business::Shipping->rate_request(), use the new values for 'shipper':
      shipper => 'UPS_Online',
      shipper => 'USPS_Online',
      shipper => 'UPS_Offline',
      
  General
  
    * [Enh] Die if path to support files is missing files.
    
    * [Enh] Restructure all of the modules
      - Keep everything the same, except the "lowest level":